--- a/Coursework/current_members.html
+++ b/Coursework/current_members.html
@@ -1,6 +1,7 @@
-<html>
+<html> <!-- Written by Favour Uduebholo -->
 <head>
     <title>Volleyball Society</title>
+    <link rel='stylesheet' href='css/main.css'>
 </head>
 
 <body>
@@ -8,7 +9,16 @@
         <h1>Volleyball Society</h1>  
     </header>
 
-    <nav> </nav>
+    <nav> 
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="img_gallery.html">Gallery</a></li>
+            <li><a href="current_members.html">Current Members</a></li>
+            <li><a href="event_calender.html">Events</a></li>
+            <li><a href="contact_us.html">Contact us</a></li>
+
+
+    </nav>
 
     <main> </main>
 
