--- a/Coursework/current_members.html
+++ b/Coursework/current_members.html
@@ -1,5 +1,19 @@
+<!--
+Threat Model
+
+Threat Source: External
+Threat Agent: Human 
+Threat Intention: Unauthorised modifications to member images 
+Threat Motivation: Defacement of website 
+Threat Impact: Possible intenttion of displayig inacurate member information
+Threat Mitigation: Implement strict access controls to restrict editing privalages 
+to authorised users only, notify members via phone email if theyve had their image changed 
+-->
+
+<!DOCTYPE html>
 <html> <!-- Written by Favour Uduebholo -->
 <head>
+    <meta charset="UTF-8"> <!-- Declares character encoding -->
     <title>Volleyball Society</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
@@ -8,18 +22,25 @@
 
 <body>
     <header>
-        <h1>Volleyball Society</h1>  
+        <!-- Logo image and webpage title -->
+        <div id="logo-container">
+            <img id="logo" src="images/logo.png" alt="Logo">
+            <h1>Volleyball Society</h1>
+        </div> 
     </header>
 
-    <nav> 
-        <ul>
+    <nav>
+        <ul> <!-- Unorderd list with active links to the diffrent website pages-->
             <li><a href="index.html">Home</a></li>
             <li><a href="img_gallery.html">Gallery</a></li>
             <li><a href="current_members.html">Current Members</a></li>
             <li><a href="event_calender.html">Events</a></li>
             <li><a href="contact_us.html">Contact us</a></li>
+            <li><a href="rules.html">Volleyball rules</a></li>
+            <li><a href="faq.html">Club Q&A</a></li>
 
-
+        </ul>
+        
     </nav>
 
     <main>
@@ -30,31 +51,31 @@
                     <!-- President -->
                     <div class="col-sm">
                         <h5>President</h5>
-                        <img src="images/president.jpg" class="rounded-circle massie-hovering" width="120" height="120" preserveAspectRatio="xMidYMid slice" style="overflow:hidden">
+                        <img src="images/president.jpg" alt="President Image" class="rounded-circle massie-hovering" width="120" height="120">
                         <h5>Teigan</h5>
                     </div>
                     <!-- Vice President -->
                     <div class="col-sm">
                         <h5>Vice President</h5>
-                        <img src="images/vice_pres.jpg" class="rounded-circle massie-hovering" width="120" height="120" preserveAspectRatio="xMidYMid slice" style="overflow:hidden">
+                        <img src="images/vice_pres.jpg" alt="Vice President Image" class="rounded-circle massie-hovering" width="120" height="120">
                         <h5>Paula</h5>
                     </div>
                     <!-- Social Secretary -->
                     <div class="col-sm">
                         <h5>Social Secretary</h5>
-                        <img src="images/social_sec.jpg" class="rounded-circle massie-hovering" width="120" height="120" preserveAspectRatio="xMidYMid slice" style="overflow:hidden">
+                        <img src="images/social_sec.jpg" alt="Social Secretary Image" class="rounded-circle massie-hovering" width="120" height="120">
                         <h5>Virginia</h5>
                     </div>
                     <!-- Well-being Officer -->
                     <div class="col-sm">
                         <h5>Well-being Officer</h5>
-                        <img src="images/well_being.jpg" class="rounded-circle massie-hovering" width="120" height="120" preserveAspectRatio="xMidYMid slice" style="overflow:hidden">
+                        <img src="images/well_being.jpg" alt="Well-being Officer Image" class="rounded-circle massie-hovering" width="120" height="120">
                         <h5>Kafe</h5>
                     </div>
                     <!-- Media Officer -->
                     <div class="col-sm">
                         <h5>Media Officer</h5>
-                        <img src="images/media.jpg" class="rounded-circle massie-hovering" width="120" height="120" preserveAspectRatio="xMidYMid slice" style="overflow:hidden">
+                        <img src="images/media.jpg" alt="Media Officer Image" class="rounded-circle massie-hovering" width="120" height="120">
                         <h5>Leticia</h5>
                     </div>
                 </div>
@@ -64,7 +85,9 @@
     
     <aside> </aside>
 
-    <footer> </footer>
+    <footer>
+    <p>Copyright Favour uduebholo 2024</p> 
+    </footer>
 
 
 </body>
