--- a/Coursework/current_members.html
+++ b/Coursework/current_members.html
@@ -51,7 +51,7 @@ to authorised users only, notify members via phone email if theyve had their ima
                     <!-- President -->
                     <div class="col-sm">
                         <h5>President</h5>
-                        <img src="images/president.jpg" alt="President Image" class="rounded-circle massie-hovering" width="120" height="120">
+                        <img src="images/President.jpg" alt="President Image" class="rounded-circle massie-hovering" width="120" height="120">
                         <h5>Teigan</h5>
                     </div>
                     <!-- Vice President -->
