--- a/Coursework/faq.html
+++ b/Coursework/faq.html
@@ -64,6 +64,8 @@
     
         <footer>
             <div id="fb-vid">
+                <!-- Embedding Facebook video with appropriate attributes for better accessibility -->
+
                 <iframe src="https://www.facebook.com/plugins/video.php?height=314&href=https%3A%2F%2Fwww.facebook.com%2FRGUvolleyball%2Fvideos%2F10153639389986197%2F&show_text=false&width=560&t=0" style="border:none;overflow:hidden;width:560px;height:314px"  allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
                 <div id="video-refrence">
                     <h3>Facebook video reference go to <a href="https://www.facebook.com/RGUvolleyball?locale=zh_CN">RGUvolleyball</a></h3>
