--- a/Coursework/faq.html
+++ b/Coursework/faq.html
@@ -37,8 +37,26 @@
 
     <main>
         <h1>Frequently Asked Questions!</h1>
-         <blockquote class="twitter-tweet"><p lang="en" dir="ltr">📣 Women&#39;s Volleyball Cup Final: <a href="https://twitter.com/StirUni?ref_src=twsrc%5Etfw">@StirUni</a> 1sts v. <a href="https://twitter.com/RobertGordonUni?ref_src=twsrc%5Etfw">@RobertGordonUni</a> 1sts<br><br>⏰ 14.00<br>📅 27th March 2019<br><br>Congratulations to <a href="https://twitter.com/_SUVC_?ref_src=twsrc%5Etfw">@_SUVC_</a> and RGU Volleyball Club for getting into the cup finals!! 🏆 The real question is, who has what it takes to be champions?? 🔥😍 <a href="https://t.co/YDl1jVNKCJ">pic.twitter.com/YDl1jVNKCJ</a></p>&mdash; Scottish Student Sport (@ScotStuSport) <a href="https://twitter.com/ScotStuSport/status/1110554610148802560?ref_src=twsrc%5Etfw">March 26, 2019</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        <p></p>
+        
+          <!-- Twitter post embedded using blockquote -->
+    <blockquote class="twitter-tweet">
+        <p lang="en" dir="ltr">
+            📣 Women's Volleyball Cup Final:
+            <a href="https://twitter.com/StirUni?ref_src=twsrc%5Etfw">@StirUni</a> 1sts v.
+            <a href="https://twitter.com/RobertGordonUni?ref_src=twsrc%5Etfw">@RobertGordonUni</a> 1sts<br><br>
+            ⏰ 14.00<br>
+            📅 27th March 2019<br><br>
+            Congratulations to
+            <a href="https://twitter.com/_SUVC_?ref_src=twsrc%5Etfw">@_SUVC_</a> and RGU Volleyball Club for getting into the cup finals!! 🏆 The real question is, who has what it takes to be champions?? 🔥😍
+            <a href="https://t.co/YDl1jVNKCJ">pic.twitter.com/YDl1jVNKCJ</a>
+        </p>
+        <a href="https://twitter.com/ScotStuSport/status/1110554610148802560?ref_src=twsrc%5Etfw">March 26, 2019</a>
+    </blockquote>
+    <!-- Script to load Twitter widget asynchronously -->
+    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+    <!-- Placeholder paragraph to create some space  -->
+    <p></p>
         <h3>How do I sign up for club membership?</h3>
     <p>To sign up for club membership, please visit our <a href="contact_us.html">You can sign up Here</a> and fill out the registration form.</p>
        
