--- a/Coursework/index.html
+++ b/Coursework/index.html
@@ -144,7 +144,7 @@ regularly update software components.
     </aside>
 
     <footer>
-        <p>Copyright Favour uduebholo </p>
+        <p>Copyright Favour uduebholo 2024 </p>
         
     </footer>
 
